--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,301 @@
+@import url('https://fonts.googleapis.com/css2?family=Laila&family=Open+Sans&display=swap');
+
+:root {
+  --complaint-color: #043D66;
+  --feeling-color: #699F96;
+  --underlyingFeeling-color: #935A5A;
+  --need-color: #93b1c9;
+  --white-text: #FEFEFE;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  width: 100vw;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 5px 3px 3px #ffffff;
+}
+
+nav {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0;
+  width: clamp(400px, 70vw, 900px);
+
+}
+
+nav.subsection {
+  justify-content: space-between;
+}
+
+
+header nav div.sectionTitle {
+  grid-column: 2 / 3;
+  font-family: 'Open Sans';
   text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  letter-spacing: 0.005em;
+  color: #808080;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+header nav div.searchArea {
+  box-sizing: border-box;
+  grid-column: 1 / 2;
+  width: 100px;
+  height: 28px;
+  border: 0.5px solid #C8C8C8;
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.25));
+  border-radius: 25px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  cursor: pointer;
+  justify-self: center;
+  align-self: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+.infoBox {
+  opacity: 0;
+  position: absolute;
+  z-index: 9;
+  visibility: hidden;
+  width: clamp(100px, 80vw, 500px);
+  padding: 25px;
+  height: auto;
+  top: 25vh;
+  margin: auto;
+  background-color: rgba(236, 236, 236, 0.955);
+  border: 1px solid rgb(174, 174, 174);
+  border-radius: 5px;
+  font-family: 'Open Sans';
+  line-height: 1.5em;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: #292929;
+  transition: opacity 200ms ease-in-out;
 }
 
-.card {
-  padding: 2em;
+
+.infoBox.show {
+  opacity: 1;
+  display: flex;
+  visibility: visible;
 }
 
-.read-the-docs {
-  color: #888;
+
+
+.sectionButton {
+  width: 220px;
+  height: 160px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0.5px solid #C4C4C4;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.sectionButton.complaint {
+  background-color: var(--complaint-color);
+  margin-bottom: 70px;
+}
+
+.sectionButton.feeling {
+  background-color: var(--feeling-color);
+}
+
+
+.sectionButton .exampleQuote {
+  width: 100%;
+  font-family: 'Laila';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+  color: var(--white-text)
+}
+
+
+
+button {
+  box-sizing: border-box;
+  margin-top: 40px;
+  font-family: 'Laila';
+  width: 120px;
+  height: 45px;
+  padding: 5px;
+  border: 0.5px solid #C8C8C8;
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.25));
+  border-radius: 25px;
+  background-color: #f0f0f0;
+  color: #666666;
+}
+
+button:active {
+  background-color: #cccccc;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  margin-top: 0;
+
+}
+
+.container.scroll {
+  height: auto;
+  margin-top: 80px;
+}
+
+
+/* PAGE 2: FEELING AND COMPLAINT LISTS */
+
+.rectangle {
+  width: 180px;
+  height: 80px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
+  font-family: 'Laila';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 31px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #FEFEFE;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.rectangle.complaint {
+  background: var(--complaint-color);
+}
+
+.rectangle.feeling {
+  background: var(--feeling-color);
+}
+
+.rectangle:last-child {
+  margin-bottom: 30px;
+}
+
+
+/* PAGE 3: EMPATHY SECTIONS */
+.sectionHeader {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  line-height: 19px;
+  text-align: center;
+  color: #535353;
+}
+
+/* NEW STYLING FOR CAROUSEL UX */
+.wrapper {
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  font-family: 'Laila';
+  height: 90px;
+  width: 100vw;
+  overflow: hidden;
+}
+
+
+
+.slider-container {
+  height: 80px;
+  display: inline-flex;
+  margin-left: calc(50vw - 100px);
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
+  cursor: grab;
+
+}
+
+
+.slide {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  /* scroll-snap-align: center; */
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 180px;
+  height: 80px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
+  font-family: 'Laila';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #FEFEFE;
+  user-select: none;
+  transition: 400ms opacity ease-in-out;
+}
+
+.slide.outofrange {
+  opacity: 0.7;
+}
+
+.dim {
+  opacity: 0.2 !important;
+}
+
+.slide.initialFeeling {
+  background-color: var(--feeling-color);
+}
+
+.slide.underlyingFeeling {
+  background-color: var(--underlyingFeeling-color);
+}
+
+.slide.need {
+  background-color: var(--need-color);
+}
+
+.grabbing {
+  cursor: grabbing;
 }
