--- a/src/App.css
+++ b/src/App.css
@@ -20,35 +20,36 @@
   justify-content: center;
 }
 
+.displayNone{
+  display: none;
+}
+
+/* HEADER */
 .header {
   width: 100vw;
   height: 70px;
   position: fixed;
   top: 0;
   background-color: white;
-  display: flex;
   align-items: center;
-  justify-content: center;
   box-shadow: 0 5px 3px 3px #ffffff;
-}
-
-nav {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  align-items: center;
-  justify-content: center;
-  margin-right: 0;
-  width: clamp(400px, 70vw, 900px);
-
+  grid-template-columns: 1fr 2fr 1fr;
 }
 
-nav.subsection {
-  justify-content: space-between;
+.searchBar {
+  grid-column: 1;
+  width: 80px;
+  height: 28px;
+  border: 0.5px solid #C8C8C8;
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.25));
+  border-radius: 25px;
+  justify-self: center;
+  text-align: center;
 }
 
-
-header nav div.sectionTitle {
-  grid-column: 2 / 3;
+.pageTitle {
+  grid-column: 2;
   font-family: 'Open Sans';
   text-align: center;
   font-style: normal;
@@ -60,24 +61,14 @@ header nav div.sectionTitle {
   color: #808080;
 }
 
-
-header nav div.searchArea {
-  box-sizing: border-box;
-  grid-column: 1 / 2;
-  width: 100px;
-  height: 28px;
-  border: 0.5px solid #C8C8C8;
-  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.25));
-  border-radius: 25px;
-}
-
-img {
+.icon {
+  grid-column: 3;
   cursor: pointer;
   justify-self: center;
   align-self: center;
 }
 
-
+ /* PAGE 1 */
 .infoBox {
   opacity: 0;
   position: absolute;
@@ -115,15 +106,20 @@ img {
   height: 160px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0.5px solid #C4C4C4;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   cursor: pointer;
+  font-family: 'Laila';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+  color: var(--white-text)
 }
 
 .sectionButton.complaint {
@@ -136,15 +132,6 @@ img {
 }
 
 
-.sectionButton .exampleQuote {
-  width: 100%;
-  font-family: 'Laila';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  text-align: center;
-  color: var(--white-text)
-}
 
 
 
@@ -166,25 +153,28 @@ button:active {
   background-color: #cccccc;
 }
 
-.container {
+.listContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   justify-content: center;
-  margin-top: 0;
+  margin-top: 80px;
 
 }
 
-.container.scroll {
-  height: auto;
-  margin-top: 80px;
+.container {
+  height: 100vh;
+  margin-top: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 
 /* PAGE 2: FEELING AND COMPLAINT LISTS */
 
-.rectangle {
+.listDiv {
   width: 180px;
   height: 80px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.12);
@@ -202,13 +192,14 @@ button:active {
   margin-top: 15px;
   margin-bottom: 15px;
   cursor: pointer;
+  /* background: var(--feeling-color); */
 }
 
-.rectangle.complaint {
+.listDiv.complaint {
   background: var(--complaint-color);
 }
 
-.rectangle.feeling {
+.listDiv.feeling {
   background: var(--feeling-color);
 }
 
