--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.25));
   border-radius: 25px;
   justify-self: center;
-  text-align: center;
+  text-indent: 10px;
 }
 
 .pageTitle {
